Se añaden alertas a los formularios

--- a/assets/styles/formulario.css
+++ b/assets/styles/formulario.css
@@ -157,7 +157,20 @@ body {
     
 }
 
+.alert {
+    max-width: 476px;
+    padding: 5px;
+    background-color: #ef6668;
+    border: 2px solid #ea2527;
+}
 
+.alert button {
+    padding: 0;
+}
+.alert .btn-close {
+    padding: 0;
+    margin: 10px 5px;
+}
 
 
 
